--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -1,3 +1,5 @@
+$support-blue: rgb(59, 145, 173);
+
 .support--pane {
     min-height: 100%;
     height: 100%;
@@ -48,7 +50,7 @@
             .support--icon--si { color: $green; }
             .support--icon--naranja { color: $toolbox-software-functions; }
             .support--icon--rojo { color: $alert-error-icon; }
-            .support--icon--ok { color: rgb(59, 145, 173); }
+            .support--icon--ok { color: $support-blue; }
             .support--icon--no {
                 color: #114698;
                 svg { fill: #114698; }
@@ -69,9 +71,9 @@
                   margin-bottom: 15px;
                   text-align: center;
                   span {
-                    border: solid 3px rgb(59, 145, 173);
+                    border: solid 3px $support-blue;
                     background-color: $grey-lighter;
-                    color: rgb(59, 145, 173);
+                    color: $support-blue;
                     padding: 10px;
                     border-radius: 15px;
                   }
@@ -83,6 +85,48 @@
 
                 li {
                     padding: 0 0 0 15px;
+                }
+
+                .support--hard-list{
+                  display: inline-flex;
+                  flex-direction: row;
+                  flex-wrap: wrap;
+                  justify-content: center;
+                  margin-top: 10px;
+                  padding: 1px;
+                  li{
+                      img{
+                        float: right;
+                        height: 100px;
+                        margin-left: 20px;
+                      }
+                      .label {
+                        color: $white;
+                        display: block;
+                        text-align: right;
+                        float: left;
+                        background: $green;
+                        padding: 3px 6px 3px;
+                        border-bottom-left-radius: 15px;
+                        border-top-right-radius: 15px;
+                        border-top-left-radius: 15px;
+                        margin-top: -10px;
+                        position: absolute;
+                        &#other {
+                          background: $support-blue;
+                        }
+                      }
+                      &:hover .label{
+                        background: $white;
+                        color: $green;
+                        border: 1px solid $green;
+                      }
+                      &:hover #other {
+                        background: $white;
+                        color: $support-blue;
+                        border: 1px solid $support-blue;
+                      }
+                  }
                 }
 
                 .support--next {
