--- a/app/views/support/hardLista.html
+++ b/app/views/support/hardLista.html
@@ -1,3 +1,11 @@
-<ul class="support--hard-list" data-ng-repeat="item in components">
-  <li><img src="images/components/{{item.uuid}}.svg" height="100" alt="{{item.name}}" /><span class="label" id="{{item.uuid}}">{{item.name}}</span></li>
-</ul>
+<div class="support--tittle--centered">
+    <ul class="support--hard-list" data-ng-repeat="item in components">
+        <li data-ng-init="getSVG(item)">
+            <a href="" data-ng-click="go(item.permalink, true)">
+                <!-- <img src="images/components/{{item.uuid}}.svg" height="100" alt="{{item.name}}" id="{{item.uuid}}-svg" /> -->
+                <div  id="{{item.uuid}}" ng-bind-html="renderSVG(item)"></div>
+                <span class="label" id="{{item.uuid}}">{{item.name}}</span>
+            </a>
+        </li>
+    </ul>
+</div>
