[SWBIT-2627] Support HW LED Test + Others

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -16,6 +16,7 @@ li[class^="icon"]:before { margin-right: 3px; }
 .icon--arrow-right:before { content: "\f061"; }
 .icon--caret-right:before { content: "\f0da"; }
 .icon--check:before { content: "\f00c"; }
+.icon--chip:before { content: "\f2db"; }
 .icon--chrome:before { content: "\f268"; }
 .icon--circle-thin:before { content: "\f1db"; }
 .icon--cloud:before { content: "\f0c2"; }
