--- a/app/views/support/hardLista.html
+++ b/app/views/support/hardLista.html
@@ -1,4 +1,4 @@
-<div class="support--tittle--centered">
+<div class="support--centered">
     <ul class="support--hard-list" data-ng-repeat="item in components">
         <li data-ng-init="getSVG(item)">
             <a href="" data-ng-click="go(item.permalink, true)">
