--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -39,6 +39,24 @@ $support-blue: rgb(59, 145, 173);
   }
 }
 
+@keyframes minishake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(1px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-2px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(2px, 0, 0);
+  }
+}
+
 .support--pane {
     min-height: 100%;
     height: 100%;
@@ -238,6 +256,15 @@ $support-blue: rgb(59, 145, 173);
                             transform: translate(0px,46px);
                           }
                         }
+                        & #lcd svg rect {
+                          transition: all 0s ease 0.8s;
+                          &:hover {
+                            fill: black;
+                            fill-opacity: 0.6;
+                            transition-delay: 0s;
+                          }
+                        }
+
                     }
                 }
 
@@ -258,6 +285,38 @@ $support-blue: rgb(59, 145, 173);
                             &:hover {
                                 background-color: #f93940;
                             }
+                        }
+                    }
+
+                    &.big {
+                      flex-direction: initial;
+                      flex-wrap: nowrap;
+                        ul {
+                          min-width: 500px;
+                        }
+                        li {
+                          padding: 3px 15px;
+                          border-left: 3px solid $grey-dark;
+                          background-color: $grey-light;
+                          margin: 3px 0px;
+                          transition: all 0.15s ease;
+                          vertical-align: middle;
+                          color: $black;
+                          &:hover {
+                            border-color: $button-primary-hover;
+                            background-color: $green;
+                            margin-left: 25px;
+                            color: $white;
+                            font-weight: bold;
+                            font-size: medium;
+                            text-decoration: none;
+                          }
+                        }
+                        a {
+                          color: inherit;
+                          &:hover {
+                            text-decoration: none;
+                          }
                         }
                     }
                 }
