--- a/app/views/support/support.html
+++ b/app/views/support/support.html
@@ -1,23 +1,31 @@
 <div class="support--pane">
     <div class="section-header table__header">
-        <h1 class="h1 header__title support--tittle"><i class="fa fa-question-circle" aria-hidden="true"></i>
- {{ 'Soporte de Bitbloq' | translate }}</h1>
+        <h1 class="h1 header__title support--tittle"><i class="fa fa-question-circle" aria-hidden="true"></i> {{ 'Soporte de Bitbloq' | translate }}</h1>
     </div>
     <section>
         <div class="support--block">
-          <button class="btn btn--primary btn--small icon--home icon--big" data-ng-hide="{{card.dontShowHomeButton}}" data-ng-click="go('index',true)" data-element="support_next_child-{{child._id}}">
-              <span class="support--button--home">{{'Volver al inicio' | translate}}</span>
-          </button>
+            <button class="btn btn--primary btn--small icon--home icon--big" data-ng-hide="{{card.dontShowHomeButton}}" data-ng-click="go('index',true)" data-element="support_next_child-{{child._id}}">
+                <span class="support--button--home">{{'Volver al inicio' | translate}}</span>
+            </button>
             <div class="support--content">
                 <h1 class="h2 header__title support--centered">{{ card.title }}</h1>
                 <span class="support--card--data" data-ng-if="card.data && !card.extData" data-ng-bind-html="card.data" />
                 <span class="support--card--data" data-ng-if="card.extData" data-ng-include="'views/support/'+ card.extData" />
-                <div class="support--next">
+                <div class="support--next" data-ng-if="card.next.length <= 3">
                     <span class="support--next-child" data-ng-repeat="child in card.next">
                         <button class="btn" data-ng-class="child.class" data-ng-click="go(child._id)" data-element="support_next_child-{{child._id}}">
                             <span data-ng-class="child.icon">{{child.response | translate}}</span>
                         </button>
                     </span>
+                </div>
+                <div class="support--next big" data-ng-if="card.next.length > 3">
+                    <ul>
+                        <a href=""  data-ng-repeat="child in card.next" data-ng-click="go(child._id)" data-element="support_next_child-{{child._id}}">
+                            <li>
+                                {{child.response | translate}}
+                            </li>
+                        </a>
+                    </ul>
                 </div>
             </div>
         </div>
