--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -12,6 +12,19 @@ $support-blue: rgb(59, 145, 173);
         fill: white;
     }
 }
+@keyframes color {
+    0% {
+        fill: $black;
+    }
+
+    50% {
+        fill: $green;
+    }
+
+    100% {
+        fill: $black;
+    }
+}
 @keyframes rotate360 {
     from {
         transform: rotate(0deg);
@@ -41,40 +54,56 @@ $support-blue: rgb(59, 145, 173);
 
 @keyframes minishake {
   10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+    transform: translate3d(-0.5px, 0, 0);
   }
 
   20%, 80% {
-    transform: translate3d(1px, 0, 0);
+    transform: translate3d(0.5px, 0, 0);
   }
 
   30%, 50%, 70% {
-    transform: translate3d(-2px, 0, 0);
+    transform: translate3d(-1px, 0, 0);
   }
 
   40%, 60% {
-    transform: translate3d(2px, 0, 0);
+    transform: translate3d(1px, 0, 0);
   }
+}
+@-webkit-keyframes thumb {
+	// 0% { transform: scale(1); }
+	// 50% { transform: scale(0.9); }
+	// 100% { transform: scale(1); }
+  0% { transform: rotateY(0deg); }
+  25% { transform: rotateY(0.3deg); }
+  50% { transform: rotateY(0deg); }
+  75% { transform: rotateY(-0.3deg); }
+  100% { transform: rotateY(0deg); }
 }
 
 .support--pane {
     min-height: 100%;
     height: 100%;
 
+
+
+    .support--button--home {
+        float: right;
+        margin-top: -5px;
+        span {
+            margin-left: -15px;
+        }
+    }
+
     section {
         background: #eee;
         min-height: calc(100% - 93px);
 
         .support--block {
-            max-width: 1200px;
+            max-width: 900px;
             min-height: calc(100% - 93px);
             margin: 0 auto;
             padding: 30px;
             background: #eee;
-
-            .support--button--home {
-                margin-left: -15px;
-            }
 
             .support--icon--giga {
                 display: flex;
@@ -138,7 +167,6 @@ $support-blue: rgb(59, 145, 173);
                 display: block;
                 padding: 15px;
                 margin: 15px;
-                border: 1px dashed #d6d6d6;
 
                 .support--centered {
                     text-align: center;
@@ -179,7 +207,7 @@ $support-blue: rgb(59, 145, 173);
 
                         svg {
                             float: right;
-                            height: 100px;
+                            height: 140px;
                             margin-left: 20px;
                             transition: 0.5s;
                             -webkit-filter: drop-shadow(none);
@@ -238,9 +266,16 @@ $support-blue: rgb(59, 145, 173);
                             path#path31 {
                                 animation: rotate360 0.8s linear infinite;
                                 transition: transform 1s linear;
-                                transform-style: preserve-3D;
                                 transform-origin: 70% 70%;
                             }
+                        }
+                        &:hover #us svg #icon {
+                                animation: minishake 0.5s linear infinite;
+                                transition: transform 1s linear;
+                        }
+                        &:hover #buzz svg #icon {
+                                animation: minishake 0.5s linear infinite;
+                                transition: transform 1s linear;
                         }
                         & #bt svg g.btLogo {
                           display: none;
@@ -263,6 +298,9 @@ $support-blue: rgb(59, 145, 173);
                             fill-opacity: 0.6;
                             transition-delay: 0s;
                           }
+                        }
+                        &:hover #other svg text {
+                          animation: color 0.8s linear infinite;
                         }
 
                     }
@@ -295,20 +333,20 @@ $support-blue: rgb(59, 145, 173);
                           min-width: 500px;
                         }
                         li {
-                          padding: 3px 15px;
+                          padding: 15px 15px;
                           border-left: 3px solid $grey-dark;
                           background-color: $grey-light;
                           margin: 3px 0px;
                           transition: all 0.15s ease;
                           vertical-align: middle;
                           color: $black;
+                          font-size: 1.25em;
                           &:hover {
                             border-color: $button-primary-hover;
                             background-color: $green;
-                            margin-left: 25px;
+                            margin-left: -25px;
                             color: $white;
                             font-weight: bold;
-                            font-size: medium;
                             text-decoration: none;
                           }
                         }
@@ -469,6 +507,20 @@ $support-blue: rgb(59, 145, 173);
             &#otras{
               margin-top: -50px;
             }
+        }
+
+        .support--hw-test-us-value {
+          span {
+            position: relative;
+            border-radius: 10px;
+            padding: 2px 10px;
+            margin: -1px;
+            background: $black;
+            border: $green 1px solid;
+            color: $green;
+            font-size: 2.5em;
+            box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
+          }
         }
     }
 }
