[SWBIT-2546] add: bitbloq offline + fixes

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -28,5 +28,6 @@ li[class^="icon"]:before { margin-right: 3px; }
 .icon--mac:before { content: "\f179"; }
 .icon--no:before { content: "\f057"; }
 .icon--ok:before { content: "\f058"; }
+.icon--reload:before { content: "\f021"; }
 .icon--url:before { content: "\f0c1"; }
 .icon--windows:before { content: "\f17a"; }
