--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -35,60 +35,82 @@ $support-blue: rgb(59, 145, 173);
     }
 }
 @keyframes shake {
-  10%, 90% {
-    transform: translate3d(-1px, 0, 0);
-  }
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
 
-  20%, 80% {
-    transform: translate3d(2px, 0, 0);
-  }
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
 
-  30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
-  }
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-4px, 0, 0);
+    }
 
-  40%, 60% {
-    transform: translate3d(4px, 0, 0);
-  }
+    40%,
+    60% {
+        transform: translate3d(4px, 0, 0);
+    }
 }
-
 @keyframes minishake {
-  10%, 90% {
-    transform: translate3d(-0.5px, 0, 0);
-  }
+    10%,
+    90% {
+        transform: translate3d(-0.5px, 0, 0);
+    }
 
-  20%, 80% {
-    transform: translate3d(0.5px, 0, 0);
-  }
+    20%,
+    80% {
+        transform: translate3d(0.5px, 0, 0);
+    }
 
-  30%, 50%, 70% {
-    transform: translate3d(-1px, 0, 0);
-  }
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-1px, 0, 0);
+    }
 
-  40%, 60% {
-    transform: translate3d(1px, 0, 0);
-  }
+    40%,
+    60% {
+        transform: translate3d(1px, 0, 0);
+    }
 }
 @-webkit-keyframes thumb {
-	// 0% { transform: scale(1); }
-	// 50% { transform: scale(0.9); }
-	// 100% { transform: scale(1); }
-  0% { transform: rotateY(0deg); }
-  25% { transform: rotateY(0.3deg); }
-  50% { transform: rotateY(0deg); }
-  75% { transform: rotateY(-0.3deg); }
-  100% { transform: rotateY(0deg); }
+    // 0% { transform: scale(1); }
+    // 50% { transform: scale(0.9); }
+    // 100% { transform: scale(1); }
+    0% {
+        transform: rotateY(0deg);
+    }
+
+    25% {
+        transform: rotateY(0.3deg);
+    }
+
+    50% {
+        transform: rotateY(0deg);
+    }
+
+    75% {
+        transform: rotateY(-0.3deg);
+    }
+
+    100% {
+        transform: rotateY(0deg);
+    }
 }
 
 .support--pane {
     min-height: 100%;
     height: 100%;
 
-
-
     .support--button--home {
         float: right;
         margin-top: -5px;
+
         span {
             margin-left: -15px;
         }
@@ -269,40 +291,48 @@ $support-blue: rgb(59, 145, 173);
                                 transform-origin: 70% 70%;
                             }
                         }
+
                         &:hover #us svg #icon {
-                                animation: minishake 0.5s linear infinite;
-                                transition: transform 1s linear;
-                        }
-                        &:hover #buzz svg #icon {
-                                animation: minishake 0.5s linear infinite;
-                                transition: transform 1s linear;
-                        }
-                        & #bt svg g.btLogo {
-                          display: none;
-                        }
-                        &:hover #bt svg {
-                          g.btLogo {
-                            display: block;
-                          }
-                          g#btBase circle {
-                            cy: 420px;
-                          }
-                          g#btSymbol {
-                            transform: translate(0px,46px);
-                          }
-                        }
-                        & #lcd svg rect {
-                          transition: all 0s ease 0.8s;
-                          &:hover {
-                            fill: black;
-                            fill-opacity: 0.6;
-                            transition-delay: 0s;
-                          }
-                        }
-                        &:hover #other svg text {
-                          animation: color 0.8s linear infinite;
+                            animation: minishake 0.5s linear infinite;
+                            transition: transform 1s linear;
                         }
 
+                        &:hover #buzz svg #icon {
+                            animation: minishake 0.5s linear infinite;
+                            transition: transform 1s linear;
+                        }
+
+                        & #bt svg g.btLogo {
+                            display: none;
+                        }
+
+                        &:hover #bt svg {
+                            g.btLogo {
+                                display: block;
+                            }
+
+                            g#btBase circle {
+                                cy: 420px;
+                            }
+
+                            g#btSymbol {
+                                transform: translate(0px,46px);
+                            }
+                        }
+
+                        & #lcd svg rect {
+                            transition: all 0s ease 0.8s;
+
+                            &:hover {
+                                fill: black;
+                                fill-opacity: 0.6;
+                                transition-delay: 0s;
+                            }
+                        }
+
+                        &:hover #other svg text {
+                            animation: color 0.8s linear infinite;
+                        }
                     }
                 }
 
@@ -327,34 +357,43 @@ $support-blue: rgb(59, 145, 173);
                     }
 
                     &.big {
-                      flex-direction: initial;
-                      flex-wrap: nowrap;
+                        flex-direction: initial;
+                        flex-wrap: nowrap;
+
                         ul {
-                          min-width: 500px;
+                            min-width: 500px;
                         }
+
                         li {
-                          padding: 15px 15px;
-                          border-left: 3px solid $grey-dark;
-                          background-color: $grey-light;
-                          margin: 3px 0px;
-                          transition: all 0.15s ease;
-                          vertical-align: middle;
-                          color: $black;
-                          font-size: 1.25em;
-                          &:hover {
-                            border-color: $button-primary-hover;
-                            background-color: $green;
-                            margin-left: -25px;
-                            color: $white;
-                            font-weight: bold;
-                            text-decoration: none;
-                          }
+                            padding: 15px;
+                            border-left: 3px solid $grey-dark;
+                            background-color: $grey-light;
+                            margin: 3px 0;
+                            transition: all 0.15s ease;
+                            vertical-align: middle;
+                            color: $black;
+                            font-size: 1.25em;
+
+                            &:hover {
+                                border-color: $button-primary-hover;
+                                background-color: $green;
+                                margin-left: -25px;
+                                color: $white;
+                                font-weight: bold;
+                                text-decoration: none;
+                            }
                         }
+
                         a {
-                          color: inherit;
-                          &:hover {
-                            text-decoration: none;
-                          }
+                            color: inherit;
+
+                            &:hover {
+                                text-decoration: none;
+                            }
+                        }
+
+                        span:before {
+                            margin-top: -6px;
                         }
                     }
                 }
@@ -387,7 +426,7 @@ $support-blue: rgb(59, 145, 173);
 
     .support--flex {
         display: inline-flex;
-        margin: 10px 0px 20px;
+        margin: 10px 0 20px;
         align-items: center;
     }
 
@@ -400,11 +439,12 @@ $support-blue: rgb(59, 145, 173);
         border-image: linear-gradient(to bottom right, $toolbox-software-zowi, $green) 1 100;
         box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
     }
+
     .support--rotate90 {
-      transform: rotate(90deg);
-      box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
-      border: 1px solid $green;
-     }
+        transform: rotate(90deg);
+        box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
+        border: 1px solid $green;
+    }
     // clone from account panel design
     .switch--chromeApp {
         color: #8c919b;
@@ -441,6 +481,33 @@ $support-blue: rgb(59, 145, 173);
             margin: 2px;
         }
     }
+    // selector
+    .support--selector {
+      display: flex;
+      align-items: center;
+
+        .support--btn-icon {
+            width: 50px;
+            min-width: 50px;
+            min-height: 50px;
+            height: 50px;
+            margin-top: 4px;
+
+            span:before {
+                padding: 0;
+            }
+
+            &:active, &:hover {
+              span:before {
+                animation: rotate360 1s linear 1;
+              }
+            }
+        }
+
+        p {
+            width: -webkit-fill-available;
+        }
+    }
     // hardware test loader
     #support--hw-test {
         align-items: center;
@@ -456,6 +523,7 @@ $support-blue: rgb(59, 145, 173);
             margin-top: -50px;
             z-index: 99;
         }
+
         .ok {
             color: $grey-medium;
             // animation: rotate360 1.5s linear infinite;
@@ -465,18 +533,22 @@ $support-blue: rgb(59, 145, 173);
             font-size: 80px;
             margin-top: -45px;
             z-index: 99;
+
             &.checked {
-              color: $green;
+                color: $green;
             }
         }
 
-        li:last-child { text-align: center; }
+        li:last-child {
+            text-align: center;
+        }
 
         img {
             width: 120px;
             transition: all 0.15s linear;
 
-            &.isHover, &:hover {
+            &.isHover,
+            &:hover {
                 width: 160px;
                 border: 1px $green solid;
                 padding: 7px;
@@ -492,35 +564,38 @@ $support-blue: rgb(59, 145, 173);
             }
         }
 
-        span{
+        span {
             position: absolute;
             color: white;
             background-color: rgba(0,0,0,0.7);
             padding: 2px 10px;
             border: 1px solid green;
             border-radius: 10px;
-            text-align: center;;
+            text-align: center;
+
             &#bqzum {
-              margin-top: -70px;
-              margin-left: -20px;
+                margin-top: -70px;
+                margin-left: -20px;
             }
-            &#otras{
-              margin-top: -50px;
+
+            &#otras {
+                margin-top: -50px;
             }
         }
 
         .support--hw-test-us-value {
-          span {
-            position: relative;
-            border-radius: 10px;
-            padding: 2px 10px;
-            margin: -1px;
-            background: $black;
-            border: $green 1px solid;
-            color: $green;
-            font-size: 2.5em;
-            box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
-          }
+            span {
+                position: relative;
+                border-radius: 10px;
+                padding: 2px 10px 0;
+                margin: -1px;
+                background: $black;
+                border: $green 1px solid;
+                color: $green;
+                font-size: 2.5em;
+                box-shadow: 5px 3px 10px rgba(0,0,0,0.5);
+                font-family: Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
+            }
         }
     }
 }
