--- a/app/views/support/doesntInstall.html
+++ b/app/views/support/doesntInstall.html
@@ -1,37 +1,47 @@
-<div class="support--grid--2"><p>¿Tiene un
-    <strong>sistema operativo certificado</strong>?</p>
-<ul>
-    <li class="support--grid--2--l">
-        <p>S.O. <strong>certificados</strong>:</p>
-        <ul>
-            <li class="icon--windows"> Windows 7</li>
-            <li class="icon--windows"> Windows 8.1</li>
-            <li class="icon--windows"> Windows 10</li>
-            <li class="icon--linux"> Ubuntu 14.04</li>
-            <li class="icon--mac"> Mac OSX 10.10+ (Solo 64b)</li>
-            <li class="icon--chrome"> Chrome OS (chromebooks))</li>
-        </ul>
-      </li>
-      <li class="support--grid--2--r">
-        <p><i>Otros S.O:</i></p>
-        <ul>
-            <li class="icon--windows"><a href="" ng-click="go('xp', true)"> Windows XP</a></li>
-            <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Debian</a></li>
-            <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Mint</a></li>
-            <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Xubuntu</a></li>
-            <li class="icon--linux"><a href="" ng-click="go('linux', true)"> OpenSuse</a></li>
-        </ul>
-    </li>
-</ul></div>
-<p>¿Su S.O es <strong class="icon--linux"> Vitalinux</strong>?:</p>
+<div class="support--grid--2">
+    <p>¿Tiene un
+        <strong>sistema operativo certificado</strong>?</p>
+    <ul>
+        <li class="support--grid--2--l">
+            <p>S.O.
+                <strong>certificados</strong>:</p>
+            <ul>
+                <li class="icon--windows"> Windows 7</li>
+                <li class="icon--windows"> Windows 8.1</li>
+                <li class="icon--windows"> Windows 10</li>
+                <li class="icon--linux"> Ubuntu 14.04</li>
+                <li class="icon--mac"> Mac OSX 10.10+ (Solo 64b)</li>
+                <li class="icon--chrome"> Chrome OS (chromebooks))</li>
+            </ul>
+        </li>
+        <li class="support--grid--2--r">
+            <p><i>Otros S.O:</i></p>
+            <ul>
+                <li class="icon--windows"><a href="" ng-click="go('xp', true)"> Windows XP</a></li>
+                <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Debian</a></li>
+                <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Mint</a></li>
+                <li class="icon--linux"><a href="" ng-click="go('linux', true)"> Xubuntu</a></li>
+                <li class="icon--linux"><a href="" ng-click="go('linux', true)"> OpenSuse</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
+<p>¿Su S.O es
+    <strong class="icon--linux"> Vitalinux</strong>?:</p>
 <ul>
     <li>Pueden solicitar al soporte oficial que lo instalen en todo el centro, de forma remota, a través de: <a href="http://soporte.vitalinux.educa.aragon.es/projects/vitallinux-dga-soporte" target="_blank" class="icon--url">Soporte Vitalinux</a></li>
     <li>En el caso de querer instalarlo a mano:
-      <ul>
-        <li class="common--text-term-fx">sudo apt-get update</li>
-        <li class="common--text-term-fx">sudo apt-get install vx-dga-l-web2board-bq</li>
-        <li><i class="fa fa-exclamation" aria-hidden="true"></i>
-<i>Recuerde reiniciar el ordenador</i></li>
-      </ul>
+        <ul>
+            <li class="common--text-term-fx">sudo apt-get update</li>
+            <li class="common--text-term-fx">sudo apt-get install vx-dga-l-web2board-bq</li>
+            <li><i class="fa fa-exclamation" aria-hidden="true"></i>
+                <i>Recuerde reiniciar el ordenador</i></li>
+        </ul>
+    </li>
+</ul>
+<p>¿Su S.O es
+    <strong class="icon--linux"> MAX9</strong>?:</p>
+<ul>
+    <li>Si tiene dificultades, <strong>instale la última versión del <i class="text--secondary">standart_web2board_installer</i></strong> incluido en el paquete correspondiente a la arquitectura de su sistema: <a href="https://github.com/bq/web2board/releases/download/Latest/linux_32_web2board_installer.zip" target="_blank" class="icon--url">web2board para Linux 32</a> o <a href="https://github.com/bq/web2board/releases/download/Latest/linux_64_web2board_installer.zip" target="_blank" class="icon--url">web2board para Linux 64</a>.
     </li>
 </ul>
