[SWBIT-2546] Support RC1

--- a/app/views/support/dontLoad.html
+++ b/app/views/support/dontLoad.html
@@ -56,6 +56,6 @@
         </li>
     </ul>
 </p>
-<p>
+<p class="support--center">
     <strong>¿Refrescar la caché ha solucionado el problema?</strong>
 </p>
