--- a/app/views/support/support.html
+++ b/app/views/support/support.html
@@ -5,7 +5,7 @@
       </button>
       <h1 class="h1 header__title support--tittle">{{ 'Soporte de Bitbloq' | translate }}</h1>
     </div>
-    <section>
+    <section class="slide" data-ng-animate="{enter: 'animate-enter', leave: 'animate-leave'}">
         <div class="support--block">
 
             <div class="support--content">
