--- a/app/views/support/w2bUndetectedWindows.html
+++ b/app/views/support/w2bUndetectedWindows.html
@@ -31,6 +31,6 @@
     <li class="icon--windows"> Windows 64b: <a href="https://github.com/bq/web2board/blob/master/res/windows/web2board.reg" target="_blank" class="icon--url">web2board.reg</a></li>
   </ul>
 </p>
-<p>
+<p class="support--center">
     <strong>¿Ha solucionado su consulta?</strong>
 </p>
