--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -102,6 +102,51 @@ $support-blue: rgb(59, 145, 173);
         transform: rotateY(0deg);
     }
 }
+@keyframes sound {
+    10%,
+    90% {
+        border: 2px solid red;
+    }
+
+    20%,
+    80% {
+        border: 4px solid red;
+    }
+
+    30%,
+    50%,
+    70% {
+        border: 6px solid red;
+    }
+
+    40%,
+    60% {
+        border: 8px solid red;
+    }
+}
+
+// nganimate
+.animate-enter,
+.animate-leave
+{
+    -webkit-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -moz-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -ms-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    -o-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+    transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+}
+.animate-enter {
+	-webkit-transition: 1s linear all; /* Chrome */
+	transition: 1s linear all;
+	opacity: 0;
+}
+
+.animate-enter.animate-enter-active {
+	opacity: 1;
+}
+
+
+// start
 
 .support--pane {
     min-height: 100%;
@@ -292,9 +337,9 @@ $support-blue: rgb(59, 145, 173);
                             }
                         }
 
-                        &:hover #us svg #icon {
-                            animation: minishake 0.5s linear infinite;
-                            transition: transform 1s linear;
+                        &:hover #us svg #icon circle {
+                            animation: sound 1s linear infinite;
+                            transition: border 1s linear;
                         }
 
                         &:hover #buzz svg #icon {
