--- a/app/views/support/3020logPorts.html
+++ b/app/views/support/3020logPorts.html
@@ -1,3 +1,3 @@
 <p data-ng-include="'views/support/logRoutes.html'"></p>
 <p><strong>Busque posibles errores</strong> que afecten a los puertos en los archivos de log
-<p><strong>¿Ha encontrado errores respecto a los puertos?</strong></p>
+<p class="support--center"><strong>¿Ha encontrado errores respecto a los puertos?</strong></p>
