--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -78,7 +78,7 @@ $support-blue: rgb(59, 145, 173);
         transform: translate3d(1px, 0, 0);
     }
 }
-@-webkit-keyframes thumb {
+@keyframes thumb {
     // 0% { transform: scale(1); }
     // 50% { transform: scale(0.9); }
     // 100% { transform: scale(1); }
@@ -123,26 +123,6 @@ $support-blue: rgb(59, 145, 173);
     60% {
         border: 8px solid red;
     }
-}
-
-// nganimate
-.animate-enter,
-.animate-leave
-{
-    -webkit-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -moz-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -ms-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    -o-transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-    transition: 1300ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-}
-.animate-enter {
-	-webkit-transition: 1s linear all; /* Chrome */
-	transition: 1s linear all;
-	opacity: 0;
-}
-
-.animate-enter.animate-enter-active {
-	opacity: 1;
 }
 
 
