[SWBIT-2546] Support RC2

--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -14,6 +14,7 @@ li[class^="icon"]:before { margin-right: 3px; }
 
 // icons
 .icon--arrow-right:before { content: "\f061"; }
+.icon--back:before { content: "\f137"; }
 .icon--caret-right:before { content: "\f0da"; }
 .icon--check:before { content: "\f00c"; }
 .icon--chip:before { content: "\f2db"; }
