--- a/app/views/support/hardLEDsTestIni.html
+++ b/app/views/support/hardLEDsTestIni.html
@@ -17,7 +17,7 @@
     </ul>
 </p>
 <p class="support--centered" data-ng-show="checked">
-  Vamos a instalar un prorama en su placa, con el que probaremos su componente LED.
+  Vamos a instalar un programa en su placa, con el que probaremos su componente LED.
 </p>
 <p class="support--centered" data-ng-show="checked">
   <button class="btn btn--primary" data-ng-click="hwTestStart('led',checked)" data-element="hw_test_led_start">
