--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -117,7 +117,20 @@ $support-width: 900px;
         stroke: $grey-light;
     }
 }
-
+@keyframes bumpLeft {
+  0% {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+  50% {
+    margin-left: -5px;
+    margin-right: 5px;
+  }
+  100%{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+}
 // start
 
 .support--pane {
@@ -131,6 +144,27 @@ $support-width: 900px;
         span {
             margin-left: -15px;
         }
+    }
+    .support--button--back {
+        float: right;
+        margin-top: -5px;
+        background: $black;
+        margin-right: 10px;
+        min-width: 100px;
+
+        span {
+            margin-left: 0px;
+        }
+
+        &:active {
+          filter: #{"invert()"};
+        }
+
+        &:hover::before {
+            animation: bumpLeft 0.5s linear infinite;
+            transition: all 0.5s;
+        }
+
     }
 
     section {
@@ -205,7 +239,7 @@ $support-width: 900px;
             .support--content {
                 display: block;
                 padding: 15px;
-                margin: 15px;
+                // margin: 15px;
 
                 .support--centered {
                     text-align: center;
@@ -223,6 +257,9 @@ $support-width: 900px;
                         padding: 10px;
                         border-radius: 15px;
                     }
+                }
+                 h1 {
+                  margin-bottom: 20px;
                 }
 
                 p {
@@ -783,6 +820,8 @@ $support-width: 900px;
                     transition: opacity 0.35s, transform 0.35s;
                     -webkit-transform: translate3d(0, 50px, 0);
                     transform: translate3d(0, 50px, 0);
+                    cursor: hand;
+                    cursor: pointer;
                 }
                 &:hover img {
                     -webkit-transform: translate3d(0, -80px, 0);
