--- a/app/views/support/hardUSTestIni.html
+++ b/app/views/support/hardUSTestIni.html
@@ -17,7 +17,7 @@
     </ul>
 </p>
 <p class="support--centered" data-ng-show="checked">
-  Vamos a instalar un prorama en su placa, con el que probaremos su componente Sensor de Ultrasonidos.
+  Vamos a instalar un programa en su placa, con el que probaremos su componente Sensor de Ultrasonidos.
 </p>
 <p class="support--centered" data-ng-show="checked">
   <button class="btn btn--primary" data-ng-click="hwTestStart('us',checked)" data-element="hw_test_led_start">
